[package]
name = "dolfin-analysis"
version = "0.1.3"
edition = "2024"
license = "MIT"
keywords = ["semantic-web", "ontology", "dolfin", "knowledge-graph", "language"]
categories = ["compilers", "parsing"]
description = "Semantic analysis for the Dolfin ontology language"
homepage = "https://www.dolfin.fr"
repository = "https://github.com/dolfin-team/dolfin-analysis"
readme = "README.md"

[dependencies]
rowl = "0.1.3"
dolfin-diagnostic = "0.1.3"
thiserror = "2.0.18"
